tests/single_instruction_translation_validation/mcsema/register-variants-samereg/lzcntq_r64_r64/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:178:22: error: use of undefined value '@my.ctlz.i64'
  %5 = tail call i64 @my.ctlz.i64(i64 %3, i1 false) #22
                     ^
0.03user 0.02system 0:00.21elapsed 29%CPU (0avgtext+0avgdata 27300maxresident)k
0inputs+16outputs (0major+3263minor)pagefaults 0swaps
